# voith-platform

./: .gitignore  README.md  voith_epic_pitch_final.html  voith_immersive_arabic.html  voith_pitch_deck.html  voith_story_pitch.html
backend/: .dockerignore  .gitignore  Dockerfile  README.md  changelog.md  contributing.md  convert_video.py  diagnose_system.py  docker-compose.yml  install-gpu-deps.sh  license.md  main.py  ocr_final_result.txt  ocr_image.py  pipeline  pyproject.toml  requirements.txt  summarize_text.py  supabase_schema.sql  transcribe_audio.py  transcribe_video.py  translate_text.py
backend/.continue/agents/: new-config.yaml
backend/src/: api.py  github_token.txt  translation.py
backend/src/asr/: __init__.py  api.py  core.py  models.py  utils.py
backend/src/converter/: __init__.py  api.py  audio.py  video.py
backend/src/downloader/: __init__.py  api.py  base.py  generic.py  utils.py
backend/src/ocr/: __init__.py  api.py  core.py
backend/src/services/: db_service.py
backend/src/summarizer/: __init__.py  api.py  core.py
backend/tests/: test_api.py  test_asr.py  test_asr_api.py  test_asr_utils.py  test_base.py  test_convert_video.py  test_converter_api.py  test_downloader_api.py  test_generic.py  test_main.py  test_ocr.py  test_summarizer.py  test_transcribe_audio.py  test_transcribe_video.py  test_translate_text.py  test_translation.py  test_utils.py
backend/tests/test_converter/: __init__.py  test_audio.py  test_video.py
frontend/: .env.example  PROJECT_CONCEPT_AR.md  VOITH_UI_SPECIFICATION.md  backend_schema.json  index.html  (+4 more)
(+42 files in other folders)
